cafe version fluid

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,14 +4,14 @@
 	background-image: url('../img/footer/background.jpg');
 	clear: both;
 	float: left;
-	height: 227px;
+	height: 220px;
 	margin-top: 145px;
 	width: 100%;
 	div {
-		margin-left: 93px;
+		margin-left: 7.26%;
 		float: left;
 		font-size: 10px;
-		width: 210px;
+		width: 16.4%;
 	}
 	img {
 		margin-right: 15px;
