--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ p, a {
   width: 100%; }
 
 .nav {
-  padding-left: 110px;
+  padding-left: 8.5%;
   margin-top: 40px; }
   .nav img {
     float: left; }
@@ -73,8 +73,8 @@ p, a {
   background-image: url("../img/header/menu-background.png");
   float: right;
   height: 55px;
-  margin-right: 110px;
-  width: 520px; }
+  margin-right: 8.5%;
+  width: 44.54%; }
   .menu div {
     float: left;
     height: 55px;
@@ -102,12 +102,15 @@ p, a {
   clear: both;
   float: left;
   margin-top: 80px;
-  padding-left: 206px; }
+  padding-left: 15.5%; }
   .slider .slider-info {
     float: left;
-    width: 445px; }
+    width: 34.76%; }
   .slider .slider-img {
-    float: right; }
+    float: left;
+    margin-left: 10%;
+    height: 98%;
+    width: 27%; }
 
 .info {
   clear: both;
@@ -116,22 +119,23 @@ p, a {
   padding-bottom: 100px; }
   .info div {
     float: left;
-    padding-left: 110px;
+    padding-left: 8.5%;
     text-align: center;
-    width: 290px; }
+    width: 22.65%; }
 
 .business-info {
   clear: both;
-  float: left; }
+  float: left;
+  width: 100%; }
   .business-info img {
     float: left;
-    height: 415px;
-    width: 650px; }
+    height: 100%;
+    width: 50%; }
   .business-info div {
     float: right;
-    height: 355px;
-    width: 495px;
-    padding: 60px 80px 0 45px; }
+    height: 83.25%;
+    width: 38.67%;
+    padding: 4.69% 6.25% 0 0; }
     .business-info div button {
       border-radius: 5px;
       padding: 10px 20px; }
@@ -157,14 +161,14 @@ p, a {
   background-image: url("../img/footer/background.jpg");
   clear: both;
   float: left;
-  height: 227px;
+  height: 220px;
   margin-top: 145px;
   width: 100%; }
   .footer div {
-    margin-left: 93px;
+    margin-left: 7.26%;
     float: left;
     font-size: 10px;
-    width: 210px; }
+    width: 16.4%; }
   .footer img {
     margin-right: 15px; }
 
