--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -9,7 +9,7 @@
 		float: left;
 		padding-left: $main-padding;
 		text-align: center;
-		width: 290px;
+		width: 22.65%;
 	}
 }
 
@@ -18,16 +18,17 @@
 .business-info {
 	clear: both;
 	float: left;
+	width: 100%;
 	img {
 		float: left;
-		height: 415px;
-		width: 650px;
+		height: 100%;
+		width: 50%;
 	}
 	div {
 		float: right;
-		height: 355px;
-		width: 495px;
-		padding: 60px 80px 0 45px;
+		height: 83.25%;
+		width: 38.67%;
+		padding: 4.69% 6.25% 0 0;
 		button {
 			border-radius: 5px;
 			padding: 10px 20px;
